--- a/action.yml
+++ b/action.yml
@@ -1,6 +1,6 @@
 name: "FTP Deploy"
 description: "Automate deploying websites and more with this GitHub action via FTP and FTPS"
-author: "Sam Kirkland"
+author: "ArthuYdalgo"
 inputs:
   server:
     required: true
