--- a/action.yml
+++ b/action.yml
@@ -1,4 +1,4 @@
-name: "FTP Deploy Action"
+name: "FTP Deploy Action 🔒"
 description: "Automate deploying websites and more with this GitHub action via FTP and FTPS"
 author: "ArthuYdalgo"
 inputs:
